--- a/TASK_C2/TASK_C2.vcxproj.filters
+++ b/TASK_C2/TASK_C2.vcxproj.filters
@@ -66,5 +66,11 @@
     <ClCompile Include="230601 465 10번.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="230602 원 내부 점.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="230602 선의 교차점.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
